--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,11 @@
+html, body {
+   height: 90%;
+}
+
+.main {
+   height: 100%;
+}
+
 body{
     font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
     letter-spacing: 0px;
@@ -33,10 +41,8 @@ body button {
 
 body>div:first-child {
     background: white;
-    width: 90%;
-    height: 90%;
-    margin-left: 5%;
-    margin-top: 2%;
+    height: 100%;
+    margin: 50px 20px 0 20px;
 }
 
 #window-3d-view {
